[KARAF-5396] Fix instance starting on java 9